# rust-web

./: Cargo.toml  README.md
assets/: blake3.txt
config/: default.toml  dev.toml  prod.toml
src/: config.rs  lib.rs  main.rs
src/cli/: gen_pass.rs  http.rs  mod.rs
src/process/: handlers.rs  http_serve.rs  http_serve.rs.bak  mod.rs
