[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
enum_dispatch = "0.3.13"
tokio = { version = "1.37.0", features = ["full"] }
